2012-02-14 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c:
	* Source/CFStringUtilities.c: Implement function to separate strings.
	* CFString/general.m: Added new tests.
	* CFLocale/displayvalues.m: Remove some unnecessary tests.
	* CFURL/create.m: Added more tests.

2012-02-07 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Add "file://localhost/" to file URLs.
	* Tests/CFURL/create.m: Fixed tests.

2012-02-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumberFormatter.c: Revert back to using '*' as padding
	character.

2012-02-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Tests/CFNumberFormatter/format.m:
	* Tests/CFTree/basic.m:
	* Tests/CFDateFormatter/basic.m:
	* Tests/CFURL/create.m: First attempt at fixing tests for OS X.

2012-01-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCharacterSet.c: Fixed bugs found with new tests.
	* Tests/CFCharacterSet:
	* Tests/CFTree: New tests.

2012-01-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c:
	* Source/CFBase.c:
	* Source/CFNumber.c:
	* Source/CFRuntime.c:
	* Source/GSPrivate.h:
	* Source/NSCFType.m: Generate a table of constant instances
	to be initialized.

2012-01-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFData.c: Fix bug in CFDataEqual().
	* Tests/CFData:
	* Tests/CFDate: New tests.

2012-01-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFError.c:
	* Source/CFString.c:
	* Source/CFLocale.c:
	* Source/GSPrivate.h:
	* Source/CFDateFormatter.c:
	* Source/CFNumberFormatter.c:
	* Source/CFXMLParser.c:
	* Source/NSCFType.m: Try to work around library loading issues
	a little better and initialize all constant instances.
	* Headers/CoreFoundation/CFBase.h: Define CF_EXPORT for C++ files.
	* Source/common.mk:
	* Source/Keys+Identifiers.c: Removed.

2012-01-28 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFUUID.c: Correctly identify OpenBSD.

2012-01-26 Stefan Bidigaray <stefanbidi@gmail.com>
